--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Terranimo
+    meta(http-equiv='Content-Security-Policy' content='upgrade-insecure-requests')
   link(rel='stylesheet', href='/styles/terramino.css')
 body
   div.score(id="score")
