Update frontend to display error if it cannot connect to backend.

--- a/frontend/public/styles/terramino.css
+++ b/frontend/public/styles/terramino.css
@@ -39,3 +39,9 @@ canvas {
   font-family: Arial, Helvetica, white, sans-serif;
   font-size: xx-large;
 }
+
+.error {
+  display: none;
+  color: red;
+  font-size: x-large;
+}
